fix: correcting styles

--- a/src/css/scss/_settings.scss
+++ b/src/css/scss/_settings.scss
@@ -14,7 +14,7 @@
     h2 {
       font-size: $font-size-lg;
       font-weight: 500;
-      font-family: secundary-font-family;
+      font-family: $secundary-font-family;
       line-height: 36.93px;
       color: $font-lavender-mist;
     }
