--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -30,7 +30,6 @@ body main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
 }
 
 .header {
@@ -189,7 +188,7 @@ body main {
 .settings__title h2 {
   font-size: 28px;
   font-weight: 500;
-  font-family: secundary-font-family;
+  font-family: "Roboto Mono", monospace;
   line-height: 36.93px;
   color: #D7D5EB;
 }
